# better-structured-gpt

./: pyproject.toml  readme.md
gptvalidator/: __init__.py  gpt_validator.py  logging.yml  message_builder.py
tests/: test_gpt_validator.py  test_live_gpt.py  test_mocked_gpt_service.py
